Caesious Athens Ithomiid
Finalizing more features and some fixes.
Includes a few unrelated fixes, such as the M2 Browning's render rotations (just off by a tiny amount).
Don't mind the name of the commit, feeling in the mood for code names.